# tauri-Boilerplate

./: .eslintrc  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
public/locales/en-US/: translation.json
public/locales/zh-CN/: translation.json
scripts/: gen-installer-artifact.js  gen-updater-artifact.js  gen-updater-manifest.js  upload-artifacts.js
src/: i18n.js  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs  system_tray.rs
src-tauri/src/utils/: clipboard.rs  common.rs
src-tauri/src/window/: mod.rs
src/app/: index.tsx  router.tsx
src/biz-components/: TogglePanelBtn.tsx  file-name.tsx  search-Input.tsx  shortcutkey-input.tsx
src/business/: constants.tsx  settings-store.ts
src/components/: Kbd.tsx  async-button.tsx  text.tsx
src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  scroll-area.tsx  table.tsx  toast.tsx
src/event/: index.tsx
src/hooks/: os.ts  settings.tsx
src/redux/: layoutSlice.ts  store.ts
src/tauri-commands/: clipboard.ts  index.ts  utils.ts
src/typings/: utilityTypes.d.ts
src/utils/: common.ts  dom.ts  helpers.ts
src/views/: error-page.tsx
src/views/main/: index.tsx
src/views/root/: about.tsx  index.tsx  log-config.tsx  nav.tsx  status.tsx  user.tsx
src/views/root/app-settings/: index.tsx  lang-select.tsx
