[package]
name = "craft-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "system-tray", "shell-open", "updater",
  "global-shortcut-all",
  "path-all",
  "os-all",
  "window-hide",
  "window-show",
  "window-set-position",
  "window-set-focus",
  "window-create",
  "window-set-always-on-top",
  "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
tauri-plugin-positioner = "1.0.4"
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
opener = "0.6.1"
blake3 = "1.5.0"
tracing = "0.1"
glob = "0.3.1"
window-shadows = "0.2.2"
arboard = "3.3.2"
image = "0.25.0"
bincode = "1.3.3"
uuid = { version = "1.8.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
thiserror = "1.0.62"
meta_fetcher = "0.1.1"
favicon-picker = "1.0.0"
reqwest = "0.11.24"
clipboard-files = "0.1.1"
validator = { version = "0.18.1", features = ["derive"] }
url = "2.5.2"

[target.'cfg(target_os = "windows")'.dependencies]
window-shadows = "0.2"
webview2-com = "0.28.0"
windows = { version = "0.52.0", features = [
  "UI_Notifications",
  "Data_Xml_Dom",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
